--- a/app/storageApp/src/app/pages/items/items.page.html
+++ b/app/storageApp/src/app/pages/items/items.page.html
@@ -8,20 +8,29 @@
 </ion-header>
 
 <ion-content>
+
     <ion-card>
-        <ion-item>
-            <ion-card-title>All Data</ion-card-title>
-            <ion-button (click)="alertNew()" slot="end" shape="round">
-                <ion-icon slot="icon-only" name="add"></ion-icon>
-            </ion-button>
+
+        <ion-item no-lines>
+            <ion-label class="bold no-margin ion-text-center">Name</ion-label>
+            <ion-label class="bold no-margin ion-text-center">Amount</ion-label>
+            <ion-buttons class="buttons" slot="end">
+                <ion-button (click)="alertNew()" fill="solid" shape="round">
+                    <ion-icon slot="icon-only" name="add"></ion-icon>
+                </ion-button>
+            </ion-buttons>
+
         </ion-item>
+
     </ion-card>
+
     <ion-card>
-        <ion-item class="padding-bottom" *ngFor="let item of (items | async)?.data">
-            <ion-label class="ion-text-capitalize">{{item.item}}</ion-label>
-            <ion-label>{{item.amount}}</ion-label>
-            <ion-buttons slot="end">
-                <ion-button color="secondary" (click)="doUpdate(item)" fill="solid" shape="round">
+
+        <ion-item class="padding-bottom" *ngFor="let item of (items | async)?.data" no-lines>
+            <ion-label class="ion-text-capitalize no-margin ion-text-center">{{item.item}}</ion-label>
+            <ion-label class="no-margin ion-text-center">{{item.amount}}</ion-label>
+            <ion-buttons class="buttons" slot="end">
+                <ion-button color="secondary" (click)="alertUpdate(item)" fill="solid" shape="round">
                     <ion-icon name="create"></ion-icon>
                 </ion-button>
                 <ion-button color="danger" (click)="doDelete(item)" fill="solid" shape="round">
@@ -29,6 +38,7 @@
                 </ion-button>
             </ion-buttons>
         </ion-item>
+
     </ion-card>
 
 </ion-content>
