--- a/app/storageApp/src/app/pages/items/items.page.scss
+++ b/app/storageApp/src/app/pages/items/items.page.scss
@@ -1,3 +1,21 @@
 .padding-bottom {
     padding-bottom: 10px;
 }
+
+.padding-left {
+    padding-left: 5px;
+}
+
+.buttons {
+    width: 70px;
+    margin: 0 10px 0 0;
+}
+
+.bold {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.no-margin {
+    margin: 10px 0;
+}
